fixes locale problem. Adds correction suggested by a forum user for charting
git-svn-id: https://dynamicjasper.svn.sourceforge.net/svnroot/dynamicjasper/api/tags/release_1_4_3-beta1@265 2bfdcaec-5528-0410-9d21-f7f2b6497bdd